# voxelai-backend

./: .gitignore  Cargo.toml  Dockerfile  firebase.json  firestore.rules  fly.dev.toml  fly.prod.toml
constructor/src/: main.rs  schematic.rs
functions/: .eslintrc.js  emulator.sh  package.json  pnpm-lock.yaml  tsconfig.json
functions/src/: index.ts
src/: block.rs  cloudflare_r2.rs  color.rs  main.rs  nbt.rs  nlp.rs  schematic.rs  scripting.rs  server.rs
src/storage/: cloudflare_r2.rs  filesystem.rs  mod.rs  storage.rs
