[package]
name = "asmbl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.22"
rand = "0.8.4"
reqwest = { version = "0.11.15", features = ["json"] }
rlua = "0.19.4"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.26.0", features = ["rt", "macros"] }
