[package]
name = "constructor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
dotenvy = "0.15.7"
gltf = "1.3.0"
rand = "0.8.4"
reqwest = { version = "0.11.15", features = ["json"] }
rlua = "0.19.4"
rocket = "=0.5.0-rc.3"
rust-s3 = "0.33.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.26.0", features = ["rt", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }
